sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:12: error: not found: value j
    copie(i,j)
            ^