sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  for(i<- 0 to getNombreValeurs()-2){
    var min:Int = getValeur(i)
    var indice:Int = i
    for(j<-i+1 to getNombreValeurs()-2){
      if(plusPetitQue(j,min)){
        min = getValeur(j)
        indice = j
      }
    }
    copie(i,j)
    setValeur(i,min)
  }
}